--- a/core/Makefile
+++ b/core/Makefile
@@ -1163,9 +1163,9 @@ $(INTERNAL_OTA_PACKAGE_TARGET): $(BUILT_TARGET_FILES_PACKAGE) $(DISTTOOLS) $(SEL
 	   -k $(KEY_CERT_PAIR) \
 	   $(BUILT_TARGET_FILES_PACKAGE) $@
 
-.PHONY: otapackage broccoli
+.PHONY: otapackage taco
 otapackage: $(INTERNAL_OTA_PACKAGE_TARGET)
-broccoli: otapackage
+taco: otapackage
 ifneq ($(TARGET_CUSTOM_RELEASETOOL),)
 	@echo "Running custom releasetool..."
 	$(hide) $(TARGET_CUSTOM_RELEASETOOL)
